Change text in about.js, add styles to div.root, correction mobile menu and add links to projects

--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -25,7 +25,8 @@
   font-size: 2rem;
   font-family: 'Roboto', sans-serif;
 }
-.project h3{
+.project a h3{
+  color: black;
   font-family: 'Montserrat', sans-serif;
   padding: 2vh 0;
 }
