--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+div#root{
+  position: relative;
+  overflow:hidden;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
